# VecTcl

./: 10-documentation.md  10-tutorial.md  15-vectclab.md  20-benchmarks.md  30-downloads.md  40-design.md  50-reference.md  90-credits.md  Makefile.in  README.md  _config.yml  benchmarks.md  configure  configure.in  downloads.md  examples.md  gccbench.c  gentest.tcl  index.html  index.md  jitproc.tcl  license.terms  lsqbench.tcl  params.json  pkgIndex.tcl.in  plot.tcl  sljittest.tcl  tcl86_vectcl.patch  teapot.txt.in  using_vectcl_for_arrays.md  vectclConfig.sh.in  vectclab.tcl  vexpr.tcl
APIdemo/: Makefile.in  configure.in
APIdemo/generic/: lsvd.c
Experiments/: jitcompiler.md  multimedia.md
LICENSES/: COPYRIGHT.hsfft
TkBridge/: configure  configure.in  pkgIndex.tcl.in  testrun.tcl
TkBridge/generic/: vectk.c
WavReader/: Makefile.in  configure.in  testrun.tcl
WavReader/generic/: wavreader.c
_includes/: foot.html  head.html  nav.html
_layouts/: default.html  design.html
benchmark/: bench_comp.gnuplot  bench_linreg.tcl  bench_memcpy.tcl  bench_setup.gnuplot  bench_solvesys.tcl  vecfbench.tcl
benchmarks/: jitcompiler.md  linreg.md  memcpy.md
demo/: 3dcanvas.tcl  autodiff.tcl  cube3d.tcl  householder.tcl  plot.tcl  vectcl2015demo.tcl
design/: 10.md  20.md  30.md  40.md  50.md  60.md  70.md
generic/: arrayshape.c  arrayshape.h  assignop.h  assignop_loop.h  bccodes.h  bcexecute.c  bcexecute.h  binop.h  binop_loop.h  clapack_cutdown.c  clapack_cutdown.h  compathack.c  compathack.h  compathack.tcl.c  defs.tcl  dlamch.c  dotproductloop.h  eig.c  eig.h  f2c.h  f2c_mathlib.h  fft.c  fft.h  hsfft.c  hsfft.h  intconv.c  intconv.h  lapack_lite.h  linalg.c  linalg.h  map.h  nacomplex.c  nacomplex.h  reduction.h  schur.c  schur.h  svd.c  svd.h  tcl_xerbla.c  uniop.h  (+10 more)
images/: benchmarks.gnuplot  compilerbench.gnuplot
sljit_src/: Makefile  pkgIndex.tcl  sljitConfig.h  sljitTcl.c
stylesheets/: pygment_trac.css  stylesheet.css
tea/: app_config_options.txt  app_makefiles.txt  codingstyle.txt  design.txt  introduction.txt  makefiles.txt  packages.txt  stubs.txt  toman.tcl  writingdocs.txt  writingtests.txt
tests/: all.tcl  compiler.test  concat.test  datatypes.test  iterator.test  linalg.test  nrcache  reduction.test  vectcl.test
tools/: cherrypick_clapack.tcl  expand.tcl  parsergen.tcl
